--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,7 @@
 
 }
 
-header{
-    background-color: whitesmoke;
-    padding: 20px;
 
-}
 
 h1{
     text-align: center;
@@ -23,4 +19,32 @@ h1{
     padding: 15px;
 }
 
+nav ul {
+    background-color: white;
+    border-bottom: 5px solid black;
+    width: 100%;
+    list-style-type: none;
+    text-align: center;
+}
+
+
+nav li {
+    display: inline-flex;
+}
+
+nav a {
+    text-decoration: none;
+    color: black;
+    padding: 10px;
+    width: 150px;
+}
+
+nav a:hover {
+    color: white;
+}
+
+nav li:hover {
+    background-color: black;
+    border-radius: 10px
+}
 
