--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,6 @@
 
 }
 
-
-
 h1{
     text-align: center;
     color: black;
@@ -48,6 +46,72 @@ nav li:hover {
     border-radius: 10px
 }
 
-.btn {
- margin-top:  5px;  
+.foto-burrito {
+    padding: 10px;
+    border-radius: 50%;
+    width: auto;
+    margin: auto;
+
+}
+
+.tarjeta {
+    height: 100%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.texto-tarjeta {
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 20px;
+}
+
+.burrito-winnie {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    border-radius: 20px;
+}
+
+
+.tarjeta-prueba {
+    width: 300px;
+    color: white;
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    box-shadow: 0 0 10px 0 #000b;
+    margin: 20px;
+    border-radius: 20px;
+}
+
+.agregar-carrito {
+    text-align: center;
+    font-size: 30px;
+    width: 40px;
+    text-decoration: none;
+    background-color: gold;
+    border: 0;
+    border-radius: 50%;
+}
+
+.agregar-carrito {
+    position: absolute;
+    top: 0%;
+    left: 100%;
+    transform: translate(-50%, -50%);
+    font-size: 25px;
+}
+
+.tarjeta-prueba::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background-image: linear-gradient(to top, #0003, transparent);
+    border-radius: 20px;
 }
