--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ nav li:hover {
     font-size: 20px;
 }
 
-.burrito-winnie {
+.producto {
     width: 100%;
     margin: 0;
     padding: 0;
@@ -76,7 +76,7 @@ nav li:hover {
 }
 
 
-.tarjeta-prueba {
+.tarjeta-producto {
     width: 300px;
     color: white;
     position: relative;
@@ -105,7 +105,7 @@ nav li:hover {
     font-size: 25px;
 }
 
-.tarjeta-prueba::after {
+.tarjeta-producto::after {
     content: "";
     width: 100%;
     height: 100%;
