--- a/css/inicioSecion.css
+++ b/css/inicioSecion.css
@@ -82,7 +82,7 @@ body {
       }
       
       .login-forgot-pass {
-        //border-bottom: 1px solid white;
+        border-bottom: 1px solid white;
         bottom: 0;
         color: white;
         cursor: pointer;
@@ -93,7 +93,7 @@ body {
         padding: .5rem;
         position: absolute;
         text-align: center;
-        //text-decoration: none;
+        text-decoration: none;
         width: 100%;
         &:hover {
           opacity: 1;
