--- a/css/style.css
+++ b/css/style.css
@@ -60,9 +60,11 @@ nav li:hover {
 
 }
 
+
 .tarjeta {
-    height: 100%;
-    margin: 0 auto;
+    height: 50%;
+    margin-top: 0;
+    margin-right: 350px;
     text-align: center;
 }
 
@@ -120,4 +122,25 @@ nav li:hover {
     bottom: 0;
     background-image: linear-gradient(to top, #0003, transparent);
     border-radius: 20px;
+}
+/* seccion carrito */
+.carrito{
+    border: 1px solid #666 ;
+    width: 35%;
+    margin-top: 30px;
+    margin-left: auto;
+    border-radius: 10px;
+    overflow: hidden;
+    margin-bottom: auto;
+    position: sticky !important;
+    top: 0;
+    transition: .3s;
+
+}
+.carrito .header-carrito{
+    background-color: #000;
+    color: #fff ;
+    text-align: center;
+    padding: 30px;
+
 }
