--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,15 @@ body {
 
 }
 
+.contenedor {
+    max-width: 1200px;
+    padding: 10px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    contain: paint;
+}
+
 h1{
     text-align: center;
     color: black;
@@ -62,9 +71,9 @@ nav li:hover {
 
 
 .tarjeta {
-    height: 50%;
+    height: 40%;
     margin-top: 0;
-    margin-right: 350px;
+    margin-right: auto;
     text-align: center;
 }
 
@@ -123,7 +132,7 @@ nav li:hover {
     background-image: linear-gradient(to top, #0003, transparent);
     border-radius: 20px;
 }
-/* seccion carrito */
+/* seccion carrito */ /*---------------------------------carrito de compra------------------------------------------------------------*/
 .carrito{
     border: 1px solid #666 ;
     width: 35%;
@@ -141,6 +150,68 @@ nav li:hover {
     background-color: #000;
     color: #fff ;
     text-align: center;
-    padding: 30px;
+    padding: 30px 0;
 
 }
+.carrito .carrito-items{
+display: flex;
+align-items: center;
+position: relative;
+border-bottom: 1px solid #666;
+padding: 20px;
+}
+.carrito .carrito-item .carrito-item-titulo{
+    display: block;
+    font-weight: bold;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+}
+.carrito .carrito-item .selector-cantidad{
+    display: inline-block;
+    margin-right: 25px;
+
+}
+.carrito .carrito-item .carrito-item-cantidad{
+    border: none ;
+    font-size: 18px;
+    background: transparent;
+    display: inline-block;
+    width: 30px;
+    padding: 5px;
+    text-align: center;
+}
+.carrito .carrito-item .selector-cantidad i{
+    font-size: 18px;
+    width: 32px;
+    height: 32px;
+    line-height: 32px;
+    text-align: center;
+    border-radius: 50%;
+    border: 1px solid #000;
+    cursor: pointer;
+
+}
+.carrito .carrito-item .carrito-item-precio{
+    font-weight: bold;
+    display: inline-block;
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+.carrito .carrito-item .btn-eliminar{
+    position: absolute;
+    right: 15px;
+    top: 15px ;
+    color: #000;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 50% ;
+    border: 1px solid #000;
+    cursor: pointer;
+    display: block;
+    background: transparent;
+    z-index: 20px;
+
+}
+
