--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,8 @@ nav li:hover {
     height: 40%;
     margin-right:auto;
     text-align: center;
+    flex: 1;
+    margin: 10px;
 }
 
 .texto-tarjeta {
@@ -93,6 +95,7 @@ nav li:hover {
     margin: 0;
     padding: 0;
     border-radius: 20px;
+    max-width: 100%;
 }
 
 
@@ -147,6 +150,8 @@ nav li:hover {
     position: sticky !important;
     top: 0;
     transition: .3s;
+    flex: 1;
+    max-width: 600px;
 
 }
 .carrito .header-carrito{
@@ -157,11 +162,11 @@ nav li:hover {
 
 }
 .carrito .carrito-items{
-display: flex;
+/*display: flex;*/
 align-items: center;
 position: relative;
 border-bottom: 1px solid #666;
-padding: 20px;
+padding: 10px;
 }
 .carrito .carrito-item .carrito-item-titulo{
     display: block;
@@ -171,7 +176,7 @@ padding: 20px;
 }
 .carrito .carrito-item .selector-cantidad{
     display: inline-block;
-    margin-right: 25px;
+    margin-right: 20px;
 
 }
 .carrito .carrito-item .carrito-item-cantidad{
@@ -201,20 +206,42 @@ padding: 20px;
     margin-bottom: 5px;
 }
 .carrito .carrito-item .btn-eliminar{
-    position: absolute;
-    right: 15px;
-    top: 15px ;
+    position:absolute;
+    right: 10px;
+    top: 10px ;
     color: #000;
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
     text-align: center;
-    border-radius: 50% ;
+    border-radius: 30% ;
     border: 1px solid #000;
     cursor: pointer;
     display: block;
     background: transparent;
-    z-index: 20px;
+    z-index: 20;
 
+}
+
+.contenedor {
+    display: flex;
+    justify-content: space-between;
+}
+
+.menu-seccion {
+    flex: 2;
+    margin-right: 20px;
+}
+
+
+
+.menu-Productos {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+.carrito-total {
+    margin-top: 20px;
 }
 
