--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
     padding: auto;
 }
 .contenedor {
-    max-width: 1500px;
+    max-width: 1400px;
     padding: 50px;
     margin: auto;
     display: flex;
@@ -207,15 +207,15 @@ padding: 10px;
 }
 .carrito .carrito-item .btn-eliminar{
     position:absolute;
-    right: 10px;
-    top: 10px ;
+    right: 15px;
+    top: 15px ;
     color: #000;
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     line-height: 30px;
     text-align: center;
-    border-radius: 30% ;
-    border: 1px solid #000;
+    border-radius: 50% ;
+    border: 1px solid #000; 
     cursor: pointer;
     display: block;
     background: transparent;
@@ -223,14 +223,61 @@ padding: 10px;
 
 }
 
+.carrito .carrito-item .btn-eliminar i{
+    pointer-events: none;
+
+}
+.carrito-total{
+    background-color: #f3f3f3;
+    padding: 30px;
+}
+.carrito-total .fila{
+    display: flex;
+    justify-content: space-between;
+    font-size: 22px;
+    font-weight: bold;
+    margin-bottom: 10px;
+
+}
+.carrito-total .btn-pagar{
+    display: block;
+    width: 100%;    
+    border: none;
+    background: #000;
+    color: #FFF;
+    border-radius: 5px;
+    font-size: 18px;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    transition: .3s;
+}
+.carrito-total .btn-pagar:hover{
+    scale: 1.05;
+}
+@media screen and (max-width:850px){
+.contenedor{
+    display: block;  
+}
+.contenedor-items{
+    width: 100% !important;
+}
+.carrito{
+    width: 100%;
+}
+}
+
 .contenedor {
+    
     display: flex;
     justify-content: space-between;
 }
 
 .menu-seccion {
     flex: 2;
-    margin-right: 20px;
+    margin-right: 70px;
 }
 
 
