--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,12 @@ body {
 }
 
 .contenedor {
-    max-width: 1400px;
-    padding: 50px;
+    max-width: 1200px;
+    padding: 30px;
     margin: auto;
     display: flex;
     justify-content: space-between;
+    /* oculto lo que queda fuera del .contenedor */
     contain: paint;
 }
 
@@ -99,7 +100,16 @@ nav li:hover {
     margin: 20px;
     border-radius: 20px;
 }
-
+.menu-productos{
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    grid-gap:30px;
+    grid-row-gap: 30px;
+    /* width: 60%; */
+    width: 100%;
+    transition: .3s;
+}
 .agregar-carrito {
     text-align: center;
     font-size: 30px;
@@ -153,10 +163,15 @@ nav li:hover {
 }
 
 .carrito .carrito-items {
+    display: flex;
     align-items: center;
+    /* justify-content: space-between; */
     position: relative;
     border-bottom: 1px solid #666;
-    padding: 10px;
+    padding: 20px;
+}
+.carrito .carrito-item img{
+    margin-right: 20px;
 }
 
 .carrito .carrito-item .carrito-item-titulo {
